--- a/homework 2/index.html
+++ b/homework 2/index.html
@@ -5,15 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <script>
-            alert("Hello world!");
-        </script>
+        <script src="./sripts.js"></script>
     </head>
-    <body>
-        <script src="./sripts.jsgit"></script>
-        <script>
-            document.write("Hello");
-            console.log("Привет");
-        </script>
-    </body>
+    <body></body>
 </html>
